// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileActions when user is on personal route should show the actions correctly 1`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
</ul>
`;

exports[`FileActions when user is on personal route should show the actions correctly 2`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-move-trigger">
      <oc-icon-stub name="move" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Move</span>
      <!---->
    </button></li>
</ul>
`;

exports[`FileActions when user is on personal route should show the actions correctly 3`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-markdown-editor-trigger">
      <oc-icon-stub name="markdown-editor" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Open in Markdown Editor</span> <span class="oc-invisible-sr">(Opens in new window)</span>
    </button></li>
</ul>
`;

exports[`FileActions when user is on personal route should show the actions correctly 4`] = `
<ul id="oc-files-actions-sidebar" class="uk-list oc-mt-s">
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-copy-trigger">
      <oc-icon-stub name="copy" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Copy</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-move-trigger">
      <oc-icon-stub name="move" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Move</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-download-trigger">
      <oc-icon-stub name="download" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Download</span>
      <!---->
    </button></li>
  <li class="oc-py-xs"><button class="oc-button oc-button-m oc-button-justify-content-center oc-button-gap-m oc-button-passive oc-button-passive-raw oc-text-bold oc-files-actions-sidebar-markdown-editor-trigger">
      <oc-icon-stub name="markdown-editor" accessiblelabel="" type="span" size="medium" variation="passive"></oc-icon-stub> <span class="oc-files-actions-sidebar-action-label">Open in Markdown Editor</span> <span class="oc-invisible-sr">(Opens in new window)</span>
    </button></li>
</ul>
`;
